# Multi-process-intern

./: .gitignore  README.md
Proyecto-Jean/: CMakeLists.txt
Proyecto-Jean/include/: Becario.h  Jefe.h
Proyecto-Jean/src/: CMakeLists.txt  Main.cpp
Proyecto-Jean/src/ProgramLibraries/: Becario.cpp  Jefe.cpp
